k8s/app/templates/jobs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jobs
    role: single
    tier: app
  name: jobs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jobs
      role: single
      tier: app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jobs
        role: single
        tier: app
    spec:
      containers:
      - args:
        - bundle
        - exec
        - sidekiq
        - -c
        - "25"
        - -q
        - default
        command:
        - "/usr/src/app/development-entrypoint"
        image: app
        imagePullPolicy: "Never"
        name: jobs
        resources: {}
        stdin: true
        tty: true
        volumeMounts:
        - mountPath: /usr/src/app
          name: jobs-data
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: jobs-data
        persistentVolumeClaim:
          claimName: static-data
status: {}
