k8s/app/templates/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web
    role: single
    tier: app
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
      role: single
      tier: app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: web
        role: single
        tier: app
    spec:
      containers:
      - args:
        - bundle
        - exec
        - rails
        - server
        - -p
        - "3000"
        - -b
        - 0.0.0.0
        command:
        - "/usr/src/app/development-entrypoint"
        image: app
        imagePullPolicy: "Never"
        name: web
        ports:
        - containerPort: 3000
        resources: {}
        stdin: true
        tty: true
        volumeMounts:
        - mountPath: /usr/src/app
          name: web-data
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: web-data
        persistentVolumeClaim:
          claimName: static-data
status: {}
