k8s/app/templates/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: postgres
    role: single
    tier: db
  name: postgres
spec:
  ports:
  - name: "5432"
    port: 5432
    targetPort: 5432
  selector:
    app: postgres
    role: single
    tier: db
status:
  loadBalancer: {}
