k8s/app/templates/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis
    role: single
    tier: db
  name: redis-service
spec:
  ports:
  - name: "6379"
    port: 6379
    targetPort: 6379
  selector:
    app: redis
    role: single
    tier: db
status:
  loadBalancer: {}
