k8s/app/templates/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web
    role: single
    tier: app
  name: web
spec:
  ports:
  - name: "3000"
    port: 3000
    targetPort: 3000
  selector:
    app: web
    role: single
    tier: app
status:
  loadBalancer: {}
