k8s/app/templates/web-allow-external.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-allow-external
spec:
  podSelector:
    matchLabels:
      tier: app
  ingress:
  - ports:
    - port: 80
    from: []
